[gd_scene load_steps=2 format=3 uid="uid://sgqh15rdwh6o"]

[ext_resource type="Script" path="res://scenes/store/store.gd" id="1_xmvbp"]

[node name="Store" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmvbp")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 99.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 0
columns = 4

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -21.0
offset_top = -13.0
offset_right = 1175.0
offset_bottom = 88.0
color = Color(0.250818, 0.250818, 0.250818, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 17.0
offset_right = 1112.0
offset_bottom = 48.0
size_flags_horizontal = 8
text = "Back to menu"

[node name="Credits_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 67.0
offset_bottom = 40.0
text = "Coins:"

[node name="Gems_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 46.0
offset_right = 69.0
offset_bottom = 69.0
text = "Gems:"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
